--- a/src/app/features/pallet-distribution/pages/pallet-distribution-page/pallet-distribution-page.component.html
+++ b/src/app/features/pallet-distribution/pages/pallet-distribution-page/pallet-distribution-page.component.html
@@ -10,6 +10,7 @@
     </div>
     <app-po-search
       (poSelected)="handlePurchaseOrderSelection($event)"
+      (onClear)="clearSearch()"
     ></app-po-search>
   </div>
 
